# students-system

./: requirements.txt
app/: pyproject.toml
app/Models/: __init__.py  base.py  country.py  course.py  course_subject.py  student.py  students_courses  subject.py  teacher.py  teacher_courses  user.py
